...
        </TouchableOpacity>
        <TouchableOpacity
          style={styles.button}
          onPress={() => {
            navigation.navigate('UserRegister');
          }}>
          <Text style={styles.buttonText}>مستخدم جديد</Text>
        </TouchableOpacity>
      </View>
      <TextInput
        style={styles.input}
        placeholderTextColor={'black'}
        value={email}
...
