...
            setSelectedTab(2);
          }}>
          <Image
            source={require('./Images/MashoratImage.png')}
            style={[styles.tabIcon]}
          />
          <Text style={styles.text}>مشورات</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
};
export default LawyerMain;
...
